--- a/public/calibrate/gc.html
+++ b/public/calibrate/gc.html
@@ -6,6 +6,7 @@
     <script src="../js/GazeCloudAPI.js" ></script>
     <script src="../js/jquery-2.2.4.min.js" ></script>
     <script src="../js/screenfull.min.js" ></script>
+    <script src="/socket.io/socket.io.js" ></script>
     <script src="./gc.js"></script>
   </head>
   <body >
