--- a/public/gaze/track.html
+++ b/public/gaze/track.html
@@ -7,7 +7,7 @@
     <script src="../js/jquery-2.2.4.min.js" ></script>
     <script src="../js/screenfull.min.js" ></script>
     <script src="/socket.io/socket.io.js" ></script>
-    <script src="./gc.js"></script>
+    <script src="./track.js"></script>
   </head>
   <body >
 
