--- a/public/gaze/track.html
+++ b/public/gaze/track.html
@@ -9,28 +9,17 @@
     <script src="/socket.io/socket.io.js" ></script>
     <script src="./track.js"></script>
   </head>
-  <body >
+  <body style="overflow:hidden;">
 
     <div style="text-align: center;display: block" >
 
-
-      <h1>GazeCloud API </h1>
+      <h1>GazeCloud API</h1>
       <h4>WebCam Online Eye-Tracking</h4>
       <br>
 
-      <button  id = 'startid' class = 'buttonStartEyeTrack'  type="button">Start eye tracking</button>
-      <button  id = 'stopid'  style= 'display:none' class = 'buttonStartEyeTrack'   type="button">Stop</button>
-      <div  style='background-color: lightblue;'>
-        <p >
-        Real-Time Data:
-        <p id = "GazeData" > </p>
-        <p id = "HeadPhoseData" > </p>
-        <p id = "HeadRotData" > </p>
-        </p>
-      </div>
-
-      <div id ="gaze" style ='position: absolute;display:none;width: 100px;height: 100px;border-radius: 50%;border: solid 2px  rgba(255, 255,255, .2);	box-shadow: 0 0 100px 3px rgba(125, 125,125, .5);	pointer-events: none;	z-index: 999999'></div>
-
+      <button id='startid'>Start eye tracking</button>
+      <button id='stopid' style= 'display:none'>Stop</button>
+      <button id='exit' style= 'display:none'>Exit</button>
 
         </label>
 
