basic window positions

--- a/public/gaze/track.html
+++ b/public/gaze/track.html
@@ -51,6 +51,12 @@
           <p>Calibrate eye tracker</p>
           <button id='startid'>Start eye tracking</button>
         </div>
+
+        <div class="step note">
+          <strong>Note:</strong>
+          To ensure the accuracy of test results, please do not resize your
+          browser window after the experiment has begun!
+        </div>
       </div>
 
       <button id='stopid' style= 'display:none'>Stop</button>
