show own gaze on gray page, fix gaze pos on thumbnail on self scroll, log position data for deepnote

--- a/public/gaze/track.html
+++ b/public/gaze/track.html
@@ -52,14 +52,22 @@
           <button id='startid'>Start eye tracking</button>
         </div>
 
+        <div class="step s-3 note" style="display:none;">
+          <strong>Note:</strong>
+          The bubble you see on this page is your own gaze position.
+          If the gaze position is incorrect, click several times
+          on this page while looking at your cursor.
+          This will help to improve gaze accuracy.
+        </div>
+
         <div class="step note">
           <strong>Note:</strong>
           To ensure the accuracy of test results, please do not resize your
           browser window after the experiment has begun!
         </div>
+        <button id='stopid' style= 'display:none'>Stop</button>
       </div>
 
-      <button id='stopid' style= 'display:none'>Stop</button>
       <button id='exit' style= 'display:none'>X</button>
 
       </label>
