--- a/public/gaze/track.html
+++ b/public/gaze/track.html
@@ -50,6 +50,7 @@
           <h4>Step 2:</h4>
           <p>Calibrate eye tracker</p>
           <button id='startid'>Start eye tracking</button>
+          <input type='checkbox' id='gaze-smoothing'>Smooth gaze</input>
         </div>
 
         <div class="step s-3 note" style="display:none;">
