shared cursor setting

--- a/public/gaze/track.html
+++ b/public/gaze/track.html
@@ -51,6 +51,7 @@
           <p>Calibrate eye tracker</p>
           <button id='startid'>Start eye tracking</button>
           <input type='checkbox' id='gaze-smoothing'>Smooth gaze</input>
+          <input type='checkbox' id='shared-cursor'>Shared cursor</input>
         </div>
 
         <div class="step s-3 note" style="display:none;">
