--- a/public/gaze/track.html
+++ b/public/gaze/track.html
@@ -52,6 +52,7 @@
           <button id='startid'>Start eye tracking</button>
           <input type='checkbox' id='gaze-smoothing'>Smooth gaze</input>
           <input type='checkbox' id='shared-cursor'>Shared cursor</input>
+          <input type='checkbox' id='minimap'>Minimap</input>
         </div>
 
         <div class="step s-3 note" style="display:none;">
