change partner color, option to turn gaze condition off

--- a/public/gaze/track.html
+++ b/public/gaze/track.html
@@ -53,6 +53,7 @@
           <input type='checkbox' id='gaze-smoothing'>Smooth gaze</input>
           <input type='checkbox' id='shared-cursor'>Shared cursor</input>
           <input type='checkbox' id='minimap'>Minimap</input>
+          <input type='checkbox' id='gaze'>Gaze</input>
         </div>
 
         <div class="step s-3 note" style="display:none;">
