start calib page

--- a/public/gaze/track.html
+++ b/public/gaze/track.html
@@ -9,6 +9,7 @@
     <script src="../js/mousetrap.min.js" ></script>
     <script src="/socket.io/socket.io.js" ></script>
     <script src="./track.js"></script>
+    <script src="./calibrate.js"></script>
   </head>
   <body>
 
@@ -80,6 +81,8 @@
       <br>
       <br>
 
+      <button id="fine-calibrate">Fine grained calibration</button>
+      <div class="calibrate"></div>
 
     </div>
   </body>
