smooth on calibration page, more boxes, rois

--- a/public/gaze/track.html
+++ b/public/gaze/track.html
@@ -51,10 +51,12 @@
           <h4>Step 2:</h4>
           <p>Calibrate eye tracker</p>
           <button id='startid'>Start eye tracking</button>
+          <input type='checkbox' id='shared-cursor'>Shared Cursor</input>
+          <input type='checkbox' id='gaze'>Shared Gaze</input>
+          <!--
           <input type='checkbox' id='gaze-smoothing'>Smooth gaze</input>
-          <input type='checkbox' id='shared-cursor'>Shared cursor</input>
           <input type='checkbox' id='minimap'>Minimap</input>
-          <input type='checkbox' id='gaze'>Gaze</input>
+          -->
         </div>
 
         <div class="step s-3 note" style="display:none;">
