download and delete log files

--- a/public/gaze/track.html
+++ b/public/gaze/track.html
@@ -41,9 +41,10 @@
       <div class="instructions" style="text-align: left; margin: 0px 20%;">
         <div class="step s-1">
           <h4>Step 1:</h4>
-          <p>Enter room id</p>
+          <p>Enter name and room id</p>
           <form id="room">
-            <input name="room-id"></input>
+            <input name="name" placeholder="Your name"></input>
+            <input name="room-id" placeholder="Room ID"></input>
             <button type="submit">Connect</button>
           </form>
         </div>
