--- a/public/gaze/track.html
+++ b/public/gaze/track.html
@@ -3,7 +3,10 @@
   <head>
     <title>GazeCoder Calibration</title>
 
+    <script src="https://api.gazerecorder.com/GazeCloudAPI.js?v=1.2" ></script>
+    <!--
     <script src="../js/GazeCloudAPI.js" ></script>
+    -->
     <script src="../js/jquery-2.2.4.min.js" ></script>
     <script src="../js/screenfull.min.js" ></script>
     <script src="../js/mousetrap.min.js" ></script>
